# r-squared-rust

./: Cargo.toml  README.md
benches/: compatibility_benchmarks.rs  crypto_benchmarks.rs  serialization_benchmarks.rs
docs/: COMPATIBILITY.md
docs/guides/: GETTING_STARTED.md  MIGRATION_GUIDE.md  PERFORMANCE_COMPARISON.md
src/: error.rs  lib.rs  utils.rs
src/chain/: account_login.rs  chain_store.rs  chain_types.rs  chain_validation.rs  mod.rs  number_utils.rs  object_id.rs  transaction_builder.rs  transaction_helper.rs
src/ecc/: address.rs  aes.rs  brain_key.rs  hash.rs  key_utils.rs  mod.rs  private_key.rs  public_key.rs  signature.rs
src/serializer/: fast_parser.rs  mod.rs  operations.rs  serializer.rs  serializer_operation.rs  serializer_types.rs  serializer_utils.rs  serializer_validation.rs  template.rs  types.rs  validation.rs
src/storage/: adapter.rs  cloud_storage.rs  memory_adapter.rs  mod.rs  personal_data.rs  storage_api.rs  storage_ipfs.rs  storage_local.rs  storage_s3.rs
tests/: integration_tests.rs
tests/compatibility/: chain_compatibility.rs  ecc_compatibility.rs  mod.rs  serializer_compatibility.rs  test_vectors.rs
